Made Some Changes

--- a/index.html
+++ b/index.html
@@ -1,29 +1,130 @@
 <html>
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-  <script src="./app.js"></script>
+  <link href="./public/style.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script src="./app.js"></script>
   </head>
 
 <body>
 <div class="container-fluid">
 <div class="row">
-<div class="col-md-6">
-  <h4>Assessment Information</h4>
+<div class="col-sm-6">
+  <h4 class="lead heading">Assessment Information</h4>
 </div>
-<div class="col-md-6">
+<div class="col-sm-6">
 </div>
 </div>
-  <div class="row">
-  <div class="col-md-4">
-    </div>
-
-
-
-
-
+<div class="row">
+  <div class="col-sm-offset-4 col-sm-4" style="float:left;margin-left:40%">
+    <p>*Required Field</p>
   </div>
+  <div class="col-sm-4">
+  </div>
+</div>
+<form name="myform" class="form-horizontal">
+  <div class="form-group">
+    <label class="control-label col-sm-2 input_label" for="assessment_type">Assessment Type*</label>
+    <div class="col-sm-4">
+    <select class="form-control input-sm" id="assessment_type">
+      <option>Formulation Review</option>
+</select>
+  </div>
+  <div class="col-sm-6">
+  </div>
+</div>
+<div class="form-group">
+  <label class="control-label col-sm-2 input_label" for="sub_type">Sub-Type*</label>
+  <div class="col-sm-4">
+  <select class="form-control input-sm" id="sub_type">
+    <option>Early Clinical Testing</option>
+</select>
+</div>
+<div class="col-sm-6">
+</div>
+</div>
+<div class="row">
+<div class="col-sm-6">
+<hr class="horizontal_line" />
+</div>
+<div class="col-sm-6">
+</div>
+</div>
+<div class="form-group">
+  <label class="control-label col-sm-2 input_label" for="human_testing">Human Testing</label>
+  <div class="col-sm-4">
+<div class="btn-group">
+  <button type="button" class="btn btn-default">Controlled</button>
+  <button type="button" class="btn btn-default">Uncontrolled</button>
+</div>
+</div>
+<div class="col-sm-6">
+</div>
+</div>
+<div class="form-group">
+  <label class="control-label col-sm-2 input_label" for="length_study">Length of Study</label>
+  <div class="col-sm-4">
+  <select class="form-control input-sm" id="length_study">
+    <option selected="selected">Select</option>
+</select>
+</div>
+<div class="col-sm-6">
+</div>
+</div>
+<div class="row">
+<div class="col-sm-6">
+<hr class="horizontal_line" />
+</div>
+<div class="col-sm-6">
+</div>
+</div>
+<div class="form-group">
+  <label class="control-label col-sm-2 input_label" for="formula_id">Formula ID Number</label>
+  <div class="col-sm-4">
+  <input type="text" class="form-control input-sm"/><br/>
+  <p id="note">If Formula ID does not exist please enter Lab notebook number.</p>
+
+</div>
+<div class="col-sm-6">
+</div>
+</div>
+<div class="form-group">
+  <label class="control-label col-sm-2 input_label" for="lab_notebook_no">Lab Notebook Number*</label>
+  <div class="col-sm-4">
+  <input type="text" class="form-control input-sm" id="lab_notebook_no"/><br/>
+  </div>
+<div class="col-sm-6">
+</div>
+</div>
+<div class="form-group">
+  <label class="control-label col-sm-2 input_label" for="product_name">Product Name (GSS)</label>
+  <div class="col-sm-4">
+  <input type="text" class="form-control input-sm" id="product_name" placeholder="[ProductName]"/><br/>
+  </div>
+<div class="col-sm-6">
+</div>
+</div>
+<div class="form-group">
+  <label class="control-label col-sm-2 input_label" for="product_name">Pre-Assessment</label>
+  <div class="col-sm-4">
+<div class="btn-group">
+  <button type="button" class="btn btn-md btn-default">Yes</button>
+  <button type="button" class="btn btn-md btn-default">No</button>
+</div>
+  </div>
+<div class="col-sm-6">
+</div>
+</div>
+
+
+
+
+
+</form>
 </div>
 
 </body>
