Removed Margin for Horizontal Line

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-offset-4 col-sm-4" id="required_field">
-        <p>*Required Field</p>
+      <div class="col-sm-offset-5 col-sm-2" >
+        <p id="required_field">*Required Field</p>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-5">
       </div>
     </div>
 
@@ -56,7 +56,9 @@
 
       <div class="row">
         <div class="col-sm-6">
-          <hr class="horizontal_line" />
+          <div class="form-group">
+            <hr class="horizontal_line" />
+          </div>
         </div>
         <div class="col-sm-6">
         </div>
@@ -87,7 +89,9 @@
 
       <div class="row">
         <div class="col-sm-6">
-          <hr class="horizontal_line" />
+          <div class="form-group">
+            <hr class="horizontal_line" />
+          </div>
         </div>
         <div class="col-sm-6">
         </div>
@@ -293,8 +297,8 @@
           <label class="control-label col-sm-2 input_label" for="approver">Approver</label>
           <div class="col-sm-4">
             <div class="input-group">
-              <input type="text" class="form-control" aria-describedby="basic-addon2">
-              <span class="input-group-addon" id="basic-addon2"><span class="glyphicon glyphicon-user"></span></span>
+              <input type="text" class="form-control input-sm" aria-describedby="basic-addon2">
+              <span class="input-group-addon" id="basic-addon2"><span class="small glyphicon glyphicon-user"></span></span>
             </div>
           </div>
           <div class="col-sm-6">
@@ -318,7 +322,9 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <hr class="horizontal_line" />
+            <div class="form-group">
+              <hr class="horizontal_line" />
+            </div>
           </div>
           <div class="col-sm-6">
           </div>
